Update config for slim 3

--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -45,10 +45,17 @@ parameters:
     application.environment: ''
 
     ############################################################################
+    # panthor
+    ############################################################################
+
+    routes.cache_disabled: false
+
+    ############################################################################
     # debug
     ############################################################################
 
     debug: false
+    symfony.debug: false
     twig.debug: false
 
     ############################################################################
