--- a/configuration/environment/dev.yml
+++ b/configuration/environment/dev.yml
@@ -19,7 +19,14 @@ mcp_logger:
 parameters:
     application.environment: 'dev'
     debug: true
+    symfony.debug: true
     twig.debug: true
+
+    ############################################################################
+    # panthor
+    ############################################################################
+
+    routes.cache_disabled: true
 
     ############################################################################
     # service configuration
