--- a/configuration/routes.yml
+++ b/configuration/routes.yml
@@ -1,8 +1,8 @@
 imports:
-    - resource: routes/routes.admin.yml
-    - resource: routes/routes.api.yml
-    - resource: routes/routes.api.crud.yml
-    - resource: routes/routes.application.yml
+    # - resource: routes/routes.admin.yml
+    # - resource: routes/routes.api.yml
+    # - resource: routes/routes.api.crud.yml
+    # - resource: routes/routes.application.yml
     - resource: routes/routes.yml
 
 parameters:
