--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -27,6 +27,18 @@ hal_core:
         onFlush: ['doctrine.listener.logger']
         prePersist: ['doctrine.listener.persist']
 
+
+mcp_logger:
+       syslog_options:
+            ident: 'hal-%application.id%'
+            facility: 'LOG_USER'
+            silent: true
+            options: ['LOG_ODELAY', 'LOG_CONS']
+
+       default_properties:
+            applicationID: '%application.id%'
+            serverEnvironment: '%application.environment%'
+
 parameters:
     # use this file for default settings that can be overridden by dev|test|prod config
     application.title: 'Hal'
@@ -53,15 +65,6 @@ parameters:
     ############################################################################
 
     error_handling.log_stacktrace: true
-
-    mcp.logger.service.syslog.options:
-        ident: 'hal-%application.id%'
-    mcp.logger.service.errorlog.options:
-        type: 3
-        file: '../.error.log'
-    mcp.logger.default_properties:
-        applicationID: '%application.id%'
-        serverEnvironment: '%application.environment%'
 
     ############################################################################
     # caching
