--- a/configuration/routes/routes.yml
+++ b/configuration/routes/routes.yml
@@ -1,24 +1,10 @@
 parameters:
     routes:
-        login:
-            method: ['GET', 'POST']
-            route: '/login'
-            stack: ['login.handler', 'login.page']
 
         dashboard:
             method: 'GET'
             route: '/'
-            stack: ['middleware.login', 'dashboard.page']
-
-        logout:
-            method: 'GET'
-            route: '/logout'
-            stack: ['logout.handler']
-
-        debug:
-            method: 'GET'
-            route:  '/debug'
-            stack:  ['middleware.super', 'debug.page']
+            stack: ['middleware.signed_in', 'dashboard.page']
 
         # github.authorization:
         #     method: 'GET'
@@ -30,6 +16,28 @@ parameters:
         #     route:  '/settings/remove-github-authorization'
         #     stack:  ['middleware.login', 'github.authorization.remove.page']
 
+        ####################################################################################################################
+        # SIGN-IN CONTROLLERS
+        ####################################################################################################################
+
+        signin:
+            method: ['GET', 'POST']
+            route: '/signin'
+            stack: ['signin.middleware', 'signin.page']
+        signout:
+            method: 'GET'
+            route: '/signout'
+            stack: ['signout.page']
+
+        ################################################################################################################
+        # HELP ROUTES
+        ################################################################################################################
+
+        latest.release:
+            method: 'GET'
+            route:  '/latest-release'
+            stack:  ['latest.release.page']
+
         styleguide:
             route:  '/styleguide'
             stack:  ['styleguide.page']
@@ -38,7 +46,48 @@ parameters:
             route:  '/styleguide/icons'
             stack:  ['styleguide.icons.page']
 
-        latest.release:
+        help:
             method: 'GET'
-            route:  '/latest-release'
-            stack:  ['latest.release.page']
+            route: '/help'
+            stack: ['help.page']
+
+        help.deployment:
+            method: 'GET'
+            route: '/help/deployment'
+            stack: ['help.deployment.page']
+
+        help.github_permissions:
+            method: 'GET'
+            route: '/help/github-permissions'
+            stack: ['help.github_permissions.page']
+
+        help.setup:
+            method: 'GET'
+            route: '/help/application-setup'
+            stack: ['help.application_setup.page']
+
+        ################################################################################################################
+
+        # routes not created yet
+
+        # from nav
+        admin: {route: '/derp1', stack: []}
+        queue: {route: '/derp2', stack: []}
+        applications: {route: '/derp3', stack: []}
+        settings: {route: '/derp4', stack: []}
+
+        # from help
+        api.index: {route: '/derp5', stack: []}
+        api.docs: {route: '/derp6', stack: []}
+
+        # from dashboard
+        application.status: {route: '/derp7', stack: []}
+        build.start: {route: '/derp8', stack: []}
+
+        # from dashboard partials
+        push: {route: '/derp9', stack: []}
+        build: {route: '/derp10', stack: []}
+        user: {route: '/derp11', stack: []}
+        environment: {route: '/derp12', stack: []}
+        server: {route: '/derp13', stack: []}
+
