Improve user session loading to allow pages to have signed-in and signed-out experiences

--- a/configuration/ui/middleware.yml
+++ b/configuration/ui/middleware.yml
@@ -2,4 +2,4 @@ services:
 
     middleware.signed_in:
         class: 'Hal\UI\Middleware\ACL\SignedInMiddleware'
-        arguments: ['@doctrine.em', '@uri']
+        arguments: ['@uri']
