--- a/configuration/config.yml
+++ b/configuration/config.yml
@@ -23,3 +23,4 @@ parameters:
         - 'panthor.middleware.encrypted_cookies'
         - 'slim.global_middleware.flash'
         - 'slim.global_middleware.session'
+        - 'slim.global_middleware.user_session'
