--- a/configuration/di.yml
+++ b/configuration/di.yml
@@ -82,6 +82,9 @@ services:
     slim.global_middleware.session:
         class: 'Hal\UI\Middleware\SessionGlobalMiddleware'
         arguments: ['@cookie.handler', '%session.lifetime%']
+    slim.global_middleware.user_session:
+        class: 'Hal\UI\Middleware\UserSessionGlobalMiddleware'
+        arguments: ['@doctrine.em', '@uri']
     slim.global_middleware.flash:
         class: 'Hal\UI\Middleware\FlashGlobalMiddleware'
         arguments: ['@cookie.handler']
