Fix name of mcp logger property

--- a/configuration/environment/prod.yml
+++ b/configuration/environment/prod.yml
@@ -8,10 +8,11 @@ hal_core:
         dbname: 'hal9000'
 
 mcp_logger:
-    logger_service: 'syslog'
+    logging_service: 'syslog'
 
 parameters:
     application.environment: 'prod'
+
     debug: false
     symfony.debug: false
     twig.debug: false
