Add JobQueueService for fetching builds/pushes together

--- a/configuration/di/services.yml
+++ b/configuration/di/services.yml
@@ -103,6 +103,10 @@ services:
     #         - '@permissions'
     #         - '@currentUser'
 
+    job_queue:
+        class: 'Hal\UI\Service\JobQueueService'
+        arguments: ['@doctrine.em', '@clock']
+
     ####################################################################################################################
     # Crypto
     ####################################################################################################################
